# clihax

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python.yml
backups/: tools_backup_2025-06-30T09-58-17.json
clihax/: cli.py
clihax/utils/: helpers.py
data/: meta.json
docs/: cli-reference.md  getting-started.md  tips-tricks.md  tool-format.md  troubleshooting.md  usage-guide.md
logs/: drops.json
