[project]
name = "clihax"
version = "0.1.0"
description = "CliHax - A command reference manager for hackers and pentesters."
authors = [{ name = "Lord" }]
readme = "README.md"
requires-python = "^3.10"
license = "MIT"
keywords = ["cli", "hacking", "pentesting", "reference", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Utilities"
]

dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "prompt-toolkit (>=3.0.51,<4.0.0)"
]

[project.scripts]
clihax = "clihax.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
